[tool.poetry]
name = "str-style"
version = "0.1.0"
description = ""
authors = ["esharf <57587340+esharf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "strstyle"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
flake8 = {version = "^6.0.0", python = ">=3.8.1,<4.0"}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
