[tool.poetry]
name = "str-style"
version = "1.0.1"
description = "str-style is a Python package for enhancing the visual appearance of text. Easily apply a variety of styles like bold, underline, colors, and more to your strings in both CLI and Python scripts."
authors = ["esharf <57587340+esharf@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "strstyle"}]
repository = "https://github.com/esharf/str-style"
keywords = ["style", "collor"]

[tool.poetry.scripts]
str-style = "strstyle.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/esharfr/str-style/issues"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = {version = "^7.0.0", python = ">=3.8.1,<4.0"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.11.1"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
